implement app packager (by opus5.5)